add training day features

--- a/src/index.html
+++ b/src/index.html
@@ -7,11 +7,11 @@
     <title>Training cycle</title>
   </head>
   <body>
-    <div id="app">
+    <div id="app" class="flex-column flex-center">
       <h1>Training cycle 💪🏼</h1>
-      <div class="training-cycle">
+      <div class="training-cycle flex-column flex-center">
         <h2>Add your training cycle</h2>
-        <button class="add-day">+ Add day</button>
+        <button class="button add-day">+ Add day</button>
       </div>
     </div>
     <script type="module" src="/main.js"></script>
