add eslint and prettier

--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,7 @@
     <title>Training cycle</title>
   </head>
   <body>
-    <div id="app" class="flex-column flex-center">
-    </div>
+    <div id="app" class="flex-column flex-center"></div>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
